--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Simple command line calculator.",
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^7.2",
+        "mikey179/vfsStream": "~1"
     },
     "authors": [
         {
